--- a/autoscale/autoscale.yaml
+++ b/autoscale/autoscale.yaml
@@ -35,11 +35,11 @@ Parameters:
 Resources:
 
   # Set a timeout of 10 minutes, else it fails 
-  ec2WaitCondition: 
-    Type: AWS::CloudFormation::WaitCondition
-    CreationPolicy: 
-      ResourceSignal:
-        Timeout: PT10M
+#  ec2WaitCondition: 
+#    Type: AWS::CloudFormation::WaitCondition
+#    CreationPolicy: 
+#      ResourceSignal:
+#        Timeout: PT10M
         
   # Create and EC2 teamplate and install httpd up and running 
   # Inputs: 
@@ -56,28 +56,6 @@ Resources:
   #
   myEC2template:
     Type: AWS::EC2::LaunchTemplate
-    Metadata:
-      Comment1: Install httpd
-      "AWS::CloudFormation::Init":
-        configSets:
-          setup:
-            - install_httpd
-        install_httpd:
-          packages:
-            yum:
-              httpd: []
-          files:
-            "/var/www/html/index.html":
-              content: |
-               <h1> Hello from cfn-init template </h1>
-            mode: "000755"
-            owner: root
-            group: root
-          services:
-            sysvinit:
-              httpd:
-                enabled: true
-                ensureRunning: true
     Properties:
       LaunchTemplateName: 
         !Sub '{{resolve:ssm:/${environment}/autoscale/template_name}}'  
@@ -95,10 +73,10 @@ Resources:
          Fn::Base64:
           !Sub | 
             #!/bin/bash
-            yum update -y aws-cfn-bootstrap
-            /opt/aws/bin/cfn-init -v --stack ${AWS::StackName} --resource template --configsets setup --region ${AWS::Region}
-            /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource ec2WaitCondition --region ${AWS::Region}
-
+            yum update -y httpd
+            echo "<h1> Server Details </h1><p><strong>HostName:</strong> $(hostname)</p> <p><strong>IP Address: </strong>$(hostname -i | cut -d " " -f 1)</p1>" > /var/www/html/index.html
+            systemctl start httpd
+            systemctl enable httpd
   # Create an autoscaling group using the template above 
   # Inputs: 
   #  From Parameter store
