--- a/autoscale/autoscale.yaml
+++ b/autoscale/autoscale.yaml
@@ -90,35 +90,35 @@ Resources:
   #  
   #  6) EC2 Template reference 
   #
-#  myAutoscalingGroup:
-#    Type: AWS::AutoScaling::AutoScalingGroup
-#    Properties:
-#      AutoScalingGroupName: myautoscalinggroup
-#      LaunchTemplate: 
-#        LaunchTemplateId: !Ref myEC2template
-#        Version: !GetAtt myEC2template.LatestVersionNumber
-#      VPCZoneIdentifier: 
-#          - Fn::ImportValue: 
-#             Fn::Sub: "${networkStackName}-PUBLIC-SUBNET1"
-#          - Fn::ImportValue: 
-#             Fn::Sub: "${networkStackName}-PUBLIC-SUBNET2"
-#      MinSize: 
-#          !Sub '{{resolve:ssm:/${environment}/autoscale/autoscale_min}}'  
-#      MaxSize: 
-#          !Sub '{{resolve:ssm:/${environment}/autoscale/autoscale_max}}'  
-#      DesiredCapacity: 
-#          !Sub '{{resolve:ssm:/${environment}/autoscale/autoscale_desired}}'  
-#      TargetGroupARNs: 
-#          - Fn::ImportValue: 
-#             Fn::Sub: "${albStackName}-TARGET-GROUP"
-#        
-#      Tags:
-#       - Key: Name
-#         Value: !Join [" - ", [Fn::Sub: "${AWS::StackName}", " auto"] ]
-#         PropagateAtLaunch: true
-#       - Key: Environment
-#         Value: !Sub ${environment}	
-#         PropagateAtLaunch: true
+  myAutoscalingGroup:
+    Type: AWS::AutoScaling::AutoScalingGroup
+    Properties:
+      AutoScalingGroupName: myautoscalinggroup
+      LaunchTemplate: 
+        LaunchTemplateId: !Ref myEC2template
+        Version: !GetAtt myEC2template.LatestVersionNumber
+      VPCZoneIdentifier: 
+          - Fn::ImportValue: 
+             Fn::Sub: "${networkStackName}-PUBLIC-SUBNET1"
+          - Fn::ImportValue: 
+             Fn::Sub: "${networkStackName}-PUBLIC-SUBNET2"
+      MinSize: 
+          !Sub '{{resolve:ssm:/${environment}/autoscale/autoscale_min}}'  
+      MaxSize: 
+          !Sub '{{resolve:ssm:/${environment}/autoscale/autoscale_max}}'  
+      DesiredCapacity: 
+          !Sub '{{resolve:ssm:/${environment}/autoscale/autoscale_desired}}'  
+      TargetGroupARNs: 
+          - Fn::ImportValue: 
+             Fn::Sub: "${albStackName}-TARGET-GROUP"
+        
+      Tags:
+       - Key: Name
+         Value: !Join [" - ", [Fn::Sub: "${AWS::StackName}", " auto"] ]
+         PropagateAtLaunch: true
+       - Key: Environment
+         Value: !Sub ${environment}	
+         PropagateAtLaunch: true
 
 Outputs:
   LoadBalancer:
