--- a/autoscale/autoscale.yaml
+++ b/autoscale/autoscale.yaml
@@ -35,11 +35,11 @@ Parameters:
 Resources:
 
   # Set a timeout of 10 minutes, else it fails 
-#  ec2WaitCondition: 
-#    Type: AWS::CloudFormation::WaitCondition
-#    CreationPolicy: 
-#      ResourceSignal:
-#        Timeout: PT10M
+  ec2WaitCondition: 
+    Type: AWS::CloudFormation::WaitCondition
+    CreationPolicy: 
+      ResourceSignal:
+        Timeout: PT10M
         
   # Create and EC2 teamplate and install httpd up and running 
   # Inputs: 
@@ -97,7 +97,7 @@ Resources:
             #!/bin/bash
             yum update -y aws-cfn-bootstrap
             /opt/aws/bin/cfn-init -v --stack ${AWS::StackName} --resource myEC2template --configsets setup --region ${AWS::Region}
-            /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --region ${AWS::Region}
+            /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource ec2WaitCondition --region ${AWS::Region}
   # Create an autoscaling group using the template above 
   # Inputs: 
   #  From Parameter store
