autoscale using config instead of configsets

--- a/autoscale/autoscale_configsets.yaml
+++ b/autoscale/autoscale_configsets.yaml
@@ -59,7 +59,10 @@ Resources:
     Metadata:
           Comment1: Install httpd
           "AWS::CloudFormation::Init":
-            config:
+            configSets:
+              setup:
+                - install_httpd
+            install_httpd:
               packages:
                 yum:
                   httpd: []
