--- a/autoscale/autoscale.yaml
+++ b/autoscale/autoscale.yaml
@@ -70,9 +70,10 @@ Resources:
                 "/var/www/html/index.html":
                     content:
                        <h1> Hello from cfn-init </h1> 
+                       <br> 
               commands: 
                 getIpAddress: 
-                    command: "echo \<br\> Public IP Address: `curl http://checkip.amazonaws.com` >> /var/www/html/index.html"
+                    command: "echo Public IP Address: `curl http://checkip.amazonaws.com` >> /var/www/html/index.html"
               services:
                 sysvinit:
                   httpd:
