--- a/autoscale/autoscale.yaml
+++ b/autoscale/autoscale.yaml
@@ -31,6 +31,10 @@ Parameters:
       - dev
       - prod 
 
+  welcomeMessage: 
+    Type: String 
+    Default: Message from the Template 
+    
 # 2 Resources (EC2 Template, AutoScaling Group)
 Resources:
 
@@ -70,7 +74,10 @@ Resources:
                 "/var/www/html/index.html":
                     content:
                        <h1> Hello from cfn-init </h1> 
-                       <br> 
+                       <br>
+                "/var/www/html/another.html": 
+                    content: !Sub |
+                        <h1> ${welcomeMessage} from ${AWS::StackName} </h1>
               commands: 
                 getIpAddress: 
                     command: "echo Public IP Address: `curl http://checkip.amazonaws.com` >> /var/www/html/index.html"
