--- a/autoscale/autoscale.yaml
+++ b/autoscale/autoscale.yaml
@@ -77,7 +77,7 @@ Resources:
                        <br>
                 "/var/www/html/another.html": 
                     content: 
-                        <h1> Hello from the stack, updated  ${AWS::StackName} </h1>
+                        <h1> Hello from the stack, just a regular text and file creation </h1>
                 "/etc/cfn/cfn-hup.conf":
                     content: !Sub |
                        [main]
